add WebDBViewer link

--- a/gitprep-site/index.html
+++ b/gitprep-site/index.html
@@ -186,6 +186,14 @@
     
     <h2>Repository & Documentation</h2>
     <pre>  <a href="https://github.com/yuki-kimoto/gitprep">Repository & Documentation</a> </pre>
+
+    <hr style="margin-top:20px;margin-bottom:10px">
+    <div>
+      <b>Sister project</b>
+    </div>
+    <div>
+      <a href="http://perlcodesample.sakura.ne.jp/webdbviewer-site">WebDBViewer</a>
+    </div>
     
 </div>
 <div id="footer" style="margin-bottom:10px">
