fix gitprep site

--- a/gitprep-site/index.html
+++ b/gitprep-site/index.html
@@ -133,10 +133,10 @@
     <a href=".">GitPrep</a>
   </div>
   <div id="gitprepbar-links">
-    <a href="http://perlcodesample.sakura.ne.jp/gitprep.cgi">Example</a>
+    <a href="http://perlcodesample.sakura.ne.jp/gitprep/gitprep.cgi">Example</a>
     <a href="https://github.com/yuki-kimoto/gitprep/archive/latest.zip">Download</a>
     <a href="https://github.com/yuki-kimoto/gitprep">Repository & Documentation</a>
-    <a href="http://twitter.com/perlcodesample2">Twitter</a>
+    <a href="http://twitter.com/yukikimoto2">Twitter</a>
   </div>
 </div>
 <div id="wrapperlicious">
