fix gitprep web site URL

--- a/gitprep-site/index.html
+++ b/gitprep-site/index.html
@@ -192,9 +192,8 @@
       <b>Sister project</b>
     </div>
     <div>
-      <a href="http://perlcodesample.sakura.ne.jp/webdbviewer-site">WebDBViewer</a>
+      <a href="http://webdbviewer.yukikimoto.com/">WebDBViewer</a>
     </div>
-    
 </div>
 <div id="footer" style="margin-bottom:10px">
   <a href="." style="text-decoration:none;color:#666;">
