--- a/gitprep-site/index.html
+++ b/gitprep-site/index.html
@@ -179,7 +179,7 @@
     </ul>
 
     <h2>Example</h2>
-    <pre>  <a href="http://perlcodesample.sakura.ne.jp/gitprep/gitprep.cgi">Example</a></pre>
+    <pre>  <a href="http://perlcodesample.sakura.ne.jp//gitprep/gitprep.cgi/kimoto/gitprep">Example(GitPrep source codes)</a></pre>
     
     <h2>Download</h2>
     <pre>  <a href="https://github.com/yuki-kimoto/gitprep/archive/latest.zip">Download</a> </pre>
