--- a/gitprep-site/index.html
+++ b/gitprep-site/index.html
@@ -133,7 +133,7 @@
     <a href=".">GitPrep</a>
   </div>
   <div id="gitprepbar-links">
-    <a href="http://perlcodesample.sakura.ne.jp/gitprep/gitprep.cgi">Example</a>
+    <a href="https://perlcodesample.sakura.ne.jp/gitprep/gitprep.cgi/kimoto/gitprep">Example</a>
     <a href="https://github.com/yuki-kimoto/gitprep/archive/latest.zip">Download</a>
     <a href="https://github.com/yuki-kimoto/gitprep">Repository & Documentation</a>
     <a href="http://twitter.com/yukikimoto2">Twitter</a>
